--- a/_teaching/2013-lean.md
+++ b/_teaching/2013-lean.md
@@ -1,9 +1,9 @@
 ---
-title: "Head Course Assistant"
+title: "Head Course Assistant, E245 The Lean Launchpad"
 collection: teaching
-type: "Course"
+type: ""
 permalink: /teaching/2013-lean
-venue: "E245 The Lean Launchpad"
+venue: ""
 date: 2017-08-01
 location: "Stanford University"
 ---
