--- a/_teaching/2013-lean.md
+++ b/_teaching/2013-lean.md
@@ -3,9 +3,9 @@ title: "Head Course Assistant, E245 The Lean Launchpad"
 collection: teaching
 type: ""
 permalink: /teaching/2013-lean
-venue: ""
+venue: "Stanford University"
 date: 2017-08-01
-location: "Stanford University"
+location: ""
 ---
 
 Office hours, logistics, and management of other TAs for project-based startup course taught by Steve Blank, popularizer of so-called lean startup methodology
