--- a/_teaching/2019-asin.md
+++ b/_teaching/2019-asin.md
@@ -1,5 +1,5 @@
 ---
-title: "Teaching Assistant, CS598 Advanced social and information networks"
+title: "Teaching Assistant, CS598HS Advanced Social and Information Networks"
 collection: teaching
 type: ""
 permalink: /teaching/2019-asin
@@ -8,4 +8,4 @@ date: 2010-01-15
 location: ""
 ---
 
-Office hours, course design, course management, and lectures on algorithmic game theory and behavioral economics. 
+Office hours, course design, course management, and lectures on algorithmic game theory, behavioral economics, and incentives in online platforms. 
