--- a/_publications/2013-cidr.md
+++ b/_publications/2013-cidr.md
@@ -1,7 +1,7 @@
 ---
 title: "Arnold: Declarative Crowd-Machine Data Integration"
 collection: publications
-permalink: /publication/cidr-2013
+permalink: /publication/2013-cidr
 excerpt: 'Trading off cost and quality in hybrid algorithmic/crowd sourced learning systems'
 date: 2013-10-01
 venue: 'CIDR'
