--- a/_publications/2014-dmmi.md
+++ b/_publications/2014-dmmi.md
@@ -1,7 +1,7 @@
 ---
 title: "Using narratives as a source to automatically learn phenotype models"
 collection: publications
-permalink: /publication/dmmi-2014
+permalink: /publication/2014-dmmi
 excerpt: 'Mining medical records for meaningful patient cohorts'
 date: 2014-10-01
 venue: 'DMMI'
