--- a/_press/2016-03-22-tc.md
+++ b/_press/2016-03-22-tc.md
@@ -1,7 +1,8 @@
 ---
-title: "Report: $50M seed fund will target health IT startups"
+title: "David Lee is back with a new fund: Refactor Capital"
 author: "Connie Loizos"
-publication: "TechCrunch"
+publisher: "TechCrunch"
+link: "https://techcrunch.com/2016/03/22/david-lee-is-back-with-a-new-fund-refactor-capital/"
 collection: press
 type: "Press"
 permalink: /press/2016-03-22-tc
